--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,16 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/index.py"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "crons": [
+    {
+      "path": "/api/admin/crawl",
+      "schedule": "0 0 * * *"
     }
   ]
 }
